* fixed albums list elements alignment
Former-commit-id: 3067818e64bdff6ad7bdd1fbc5fe1230e53525b5
Former-commit-id: 42f94227aa545d9c84dc5e9066a527f48c523d4d

--- a/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
+++ b/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
@@ -186,7 +186,7 @@ img {
 
 .artists-list .list-group .list-group-item h3 {
     font-weight: bold;
-    margin-top: -38px;
+    margin-top: -5px;
     font-variant: small-caps;
 }
 
@@ -552,7 +552,7 @@ li > input { width: 100% }
 
 .order-block .buy-btn button,
 .buttons .buy-btn button {
-    margin-top: 15px;
+    margin-top: 12px;
     width: 100px;
     height: 25px;
     color: black;
@@ -734,3 +734,11 @@ li > input { width: 100% }
 #audio-hidden { width: 500px }
 
 .copyright { display: none; }
+
+.anonimus-price {
+    margin-top: 18px;    
+}
+
+.artist-tracks-count, .artist-albums-count {
+    display: inline-block;
+}
